--- a/Athena/MainWindow.xaml
+++ b/Athena/MainWindow.xaml
@@ -5,29 +5,55 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Athena"
         mc:Ignorable="d"
-        Title="Athena" Height="350" Width="525">
+        Title="Athena" Height="500
+        " Width="525">
     <Grid>
-        <Button x:Name="GenerateProjectButton" Content="Generate Project" HorizontalAlignment="Left" Margin="10,15,0,0" VerticalAlignment="Top" Width="120" Click="GenerateProjectButton_Click"/>
-        <CheckBox x:Name="WithVS2017" Content="Use VisualStudio 2017" HorizontalAlignment="Left" Margin="160,18,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.398,-2.495" />
-        <Separator Margin="0,50,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="BuildEditor" Content="Build Editor" HorizontalAlignment="Left" Margin="10,68,0,0" VerticalAlignment="Top" Width="75" Click="BuildEditor_Click"/>
-        <Separator Margin="0,100,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="StartServer" Content="Server" HorizontalAlignment="Left" Margin="15,115,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="StartServerDebug" Content="-Debug" HorizontalAlignment="Left" Margin="103,115,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="StartGame" Content="Game" HorizontalAlignment="Left" Margin="15,150,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="StartGameDebug" Content="-Debug" HorizontalAlignment="Left" Margin="103,150,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.506,0.346"/>
-        <TextBox x:Name="GameInstances" HorizontalAlignment="Left" Height="23" Margin="271,148,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="30" RenderTransformOrigin="0.5,0.55
-                 "/>
-        <TextBlock HorizontalAlignment="Left" Margin="184,150,0,0" TextWrapping="Wrap" Text="Game Instances" VerticalAlignment="Top" RenderTransformOrigin="-0.646,0.509"/>
-        <GroupBox Header="Hmd Types" Height="60" Margin="0,175,0,0" VerticalAlignment="Top">
+        <GroupBox Header="Generate Project Files" Height="60" Margin="2,0,2,0" VerticalAlignment="Top">
             <Grid>
-                <RadioButton x:Name="NoHmd" Content="No Hmd" HorizontalAlignment="Left" Margin="15,15,0,0" VerticalAlignment="Top"/>
-                <RadioButton x:Name="DefaultHmd" Content="Default" HorizontalAlignment="Left" Margin="115,15,0,0" VerticalAlignment="Top"/>
-                <RadioButton x:Name="GoogleVR" Content="Google VR" HorizontalAlignment="Left" Margin="215,15,0,0" VerticalAlignment="Top"/>
-                <RadioButton x:Name="Occulus" Content="Occulus" HorizontalAlignment="Left" Margin="315,15,0,0" VerticalAlignment="Top"/>
-                <RadioButton x:Name="SteamVR" Content="SteamVR" HorizontalAlignment="Left" Margin="415,15,0,0" VerticalAlignment="Top"/>
+                <Button x:Name="GenerateProjectButton" Content="Generate Project" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120" Click="GenerateProjectButton_Click"/>
+                <CheckBox x:Name="WithVS2017" Content="VisualStudio 2017" HorizontalAlignment="Left" Margin="160,13,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.398,-2.495" Checked="WithVS2017_Checked" Unchecked="WithVS2017_Unchecked" />
             </Grid>
         </GroupBox>
-        <Button x:Name="Run" Content="Run" HorizontalAlignment="Left" Margin="15,249,0,0" VerticalAlignment="Top" Width="75" Click="Run_Click"/>
+
+        <GroupBox Header="Build Editor" Height="90" Margin="2,70,2,0" VerticalAlignment="Top">
+            <Grid>
+                <Button x:Name="BuildEditor" Content="Build Editor" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="BuildEditor_Click"/>
+                <CheckBox x:Name="BuildWithVS2017" Content="VisualStudio 2017" HorizontalAlignment="Left" Margin="110,13,0,0" VerticalAlignment="Top" Checked="BuildWithVS2017_Checked" Unchecked="BuildWithVS2017_Unchecked" />
+                <CheckBox x:Name="DebugGame" Content="DebugGame" HorizontalAlignment="Left" Margin="250,13,0,0" VerticalAlignment="Top" />
+                <CheckBox x:Name="SkipShaderCompiler" Content="Skip ShaderCompiler" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top" />
+                <CheckBox x:Name="SkipFrontend" Content="Skip Frontend" HorizontalAlignment="Left" Margin="160,40,0,0" VerticalAlignment="Top" />
+                <CheckBox x:Name="SkipLightmass" Content="Skip Lightmass" HorizontalAlignment="Left" Margin="280,40,0,0" VerticalAlignment="Top" />
+            </Grid>
+        </GroupBox>
+        
+        <GroupBox Header="Run Game" Height="170" Margin="2,170,2,0" VerticalAlignment="Top">
+            <Grid>
+                <CheckBox x:Name="StartServer" Content="Server" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                <CheckBox x:Name="StartServerDebug" Content="-Debug" HorizontalAlignment="Left" Margin="103,10,0,0" VerticalAlignment="Top"/>
+                <Separator Margin="10,32,10,0" VerticalAlignment="Top" Foreground="Black" Background="#7FC8C8C8"/>
+                <CheckBox x:Name="StartGame" Content="Game" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top"/>
+                <CheckBox x:Name="StartGameDebug" Content="-Debug" HorizontalAlignment="Left" Margin="103,40,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.506,0.346"/>
+                <TextBox x:Name="GameInstances" HorizontalAlignment="Left" Height="20" Margin="275,40,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="30" RenderTransformOrigin="0.5,0.55
+                 "/>
+                <TextBlock HorizontalAlignment="Left" Margin="184,40,0,0" TextWrapping="Wrap" Text="Game Instances:" VerticalAlignment="Top" RenderTransformOrigin="-0.646,0.509"/>
+                <GroupBox Header="Hmd Types" Height="60" Margin="5,60,20,0" VerticalAlignment="Top">
+                    <Grid>
+                        <RadioButton x:Name="NoHmd" Content="No Hmd" HorizontalAlignment="Left" Margin="0,15,0,0" VerticalAlignment="Top"/>
+                        <RadioButton x:Name="DefaultHmd" Content="Default" HorizontalAlignment="Left" Margin="80,15,0,0" VerticalAlignment="Top"/>
+                        <RadioButton x:Name="GoogleVR" Content="Google VR" HorizontalAlignment="Left" Margin="160,15,0,0" VerticalAlignment="Top"/>
+                        <RadioButton x:Name="Occulus" Content="Occulus" HorizontalAlignment="Left" Margin="240,15,0,0" VerticalAlignment="Top"/>
+                        <RadioButton x:Name="SteamVR" Content="SteamVR" HorizontalAlignment="Left" Margin="320,15,0,0" VerticalAlignment="Top"/>
+                    </Grid>
+                </GroupBox>
+                <Button x:Name="Run" Content="Run" HorizontalAlignment="Left" Margin="10,125,0,0" VerticalAlignment="Top" Width="100" Click="Run_Click"/>
+            </Grid>
+        </GroupBox>
+
+        <GroupBox Header="Sync" Height="60" Margin="2,350,2,0" VerticalAlignment="Top">
+            <Grid>
+                <Button x:Name="SyncGit" Content="Sync" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="100" Click="SyncGit_Click"/>
+                <Button x:Name="AutoFetch" Content="Auto Fetch" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Width="100" Click="AutoFetch_Click"/>
+            </Grid>
+        </GroupBox>
     </Grid>
 </Window>
