--- a/Athena/MainWindow.xaml
+++ b/Athena/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Athena"
         mc:Ignorable="d"
-        Title="Athena" Height="600" Width="525">
+        Title="Athena" Height="600" Width="525" Closed="Window_Closed">
     <Window.Resources>
         <Style TargetType="FrameworkElement" x:Key="BaseStyle">
             <Setter Property="VerticalAlignment" Value="Center" />
