--- a/Athena/MainWindow.xaml
+++ b/Athena/MainWindow.xaml
@@ -49,7 +49,10 @@
                         <StackPanel Orientation="Horizontal">
                             <CheckBox x:Name="StartServerDebug" Content="-Debug" Margin="0" ToolTip="Start the server using DebugGame binary instead of Development"/>
                         </StackPanel>
-                        <Button x:Name="RunServer" Content="Run Server" Margin="0,10,0,0" Width="100" HorizontalAlignment="Left" Click="RunServer_Click"/>
+                        <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                            <Button x:Name="RunServer" Content="Run Server" Width="100" Click="RunServer_Click"/>
+                            <Button x:Name="ServerParameters" Content="Parameters..." Margin="20,0,0,0" Width="100" Click="ServerParameters_Click"/>
+                        </StackPanel>
                     </StackPanel>
                 </GroupBox>
                 <GroupBox Header="Game" Margin="0" VerticalAlignment="Top">
