--- a/Athena/MainWindow.xaml
+++ b/Athena/MainWindow.xaml
@@ -58,7 +58,10 @@
                                 <RadioButton x:Name="EditorSteamVR" Content="SteamVR" Margin="20,0,0,0"/>
                             </StackPanel>
                         </GroupBox>
-                        <Button x:Name="RunEditor" Content="Run Editor" Margin="0,10,0,0" Width="100" HorizontalAlignment="Left" Click="RunEditor_Click"/>
+                        <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                            <Button x:Name="RunEditor" Content="Run Editor" Margin="0" Width="100" Click="RunEditor_Click"/>
+                            <Button x:Name="EditorParameters" Content="Parameters..." Margin="20,0,0,0" Width="100" Click="EditorParameters_Click"/>
+                        </StackPanel>
                     </StackPanel>
                 </GroupBox>
                 
@@ -89,7 +92,10 @@
                                 <RadioButton x:Name="GameSteamVR" Content="SteamVR" Margin="20,0,0,0"/>
                             </StackPanel>
                         </GroupBox>
-                        <Button x:Name="RunGame" Content="Run Game" Margin="0,10,0,0" Width="100" Click="RunGame_Click" HorizontalAlignment="Left"/>
+                        <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                            <Button x:Name="RunGame" Content="Run Game" Width="100" Click="RunGame_Click"/>
+                            <Button x:Name="GameParameters" Content="Parameters..." Margin="20,0,0,0" Width="100" Click="GameParameters_Click"/>
+                        </StackPanel>
                     </StackPanel>
                 </GroupBox>
 
