--- a/Athena/ParameterWindow.xaml
+++ b/Athena/ParameterWindow.xaml
@@ -5,10 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Athena"
         mc:Ignorable="d"
-        Title="ParameterWindow" Height="300" Width="300">
+        Title="Extra Parameters" Height="300" Width="500">
     <Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="142,111,0,0" TextWrapping="Wrap" Text="Hello world" VerticalAlignment="Top"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="158,184,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <StackPanel Margin="10">
+            <ScrollViewer Height="200">
+                <StackPanel x:Name="ParametersContainer" Margin="0,0,10,0">
+                </StackPanel>
+            </ScrollViewer>
+            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                <Button x:Name="AddParam" Content="Add" Width="30" Click="AddParam_Click"/>
+                <Button x:Name="Ok" Content="OK" Width="60" HorizontalAlignment="Right" Margin="50,0,0,0" Click="Ok_Click"/>
+                <Button x:Name="Cancel" Content="Cancel" Width="60" HorizontalAlignment="Right" Margin="10,0,0,0" Click="Cancel_Click"/>
+                <Button x:Name="Apply" Content="Apply" Width="60" HorizontalAlignment="Right" Margin="10,0,0,0" Click="Apply_Click"/>
+            </StackPanel>
+        </StackPanel>
 
     </Grid>
 </Window>
